# GitExercises

./: CMakeLists.txt  addings.cpp  addings.h  constans.h  main.cpp
